fixed underline on nav links and spacing in footer

--- a/CSS/header-footer-style.css
+++ b/CSS/header-footer-style.css
@@ -95,7 +95,7 @@ margin-right: unset;
 }
 
 header.small #main-nav a:hover {
-border-bottom: 2px solid rgb(255, 222, 192);
+border-bottom: 1.5px solid rgb(255, 222, 192);
 padding-bottom: 2px;
 }
 
@@ -164,8 +164,8 @@ max-width: 1024px;
 }
 
 #main-nav a:hover {
-border-bottom: 6px solid rgb(255, 222, 192);
-padding-bottom: 5px;
+border-bottom: 2px solid rgb(255, 222, 192);
+padding-bottom: 3px;
 }
 
 #main-nav ul{
@@ -188,6 +188,7 @@ justify-content: flex-start;
 
 footer nav li{
 font-size: 1.2rem;
+font-weight:bold;
 padding: 0.4rem 0;
 flex: 1 1 33%;
 }
@@ -205,7 +206,7 @@ flex: 0 0 100%;
 
 footer {
   position: relative;
-  padding: 2.4rem 0.8rem;
+  padding: 2.4rem 2rem 2.4rem 3rem;
   background-color: rgba(165, 79, 80, 0.95);
   color: rgb(255, 222, 192);
   display: flex;
@@ -243,6 +244,7 @@ background-color: transparent;
 .social img {
 width: 100%;
 height: auto;
+border-radius:3px;
 }
 
 /* 5) MEDIA QUERIES */
